codex-rs/tui/src/snapshots/codex_tui__inline_visualization__tests__inline_d2_rich_render_preserves_raw_history.snap
---
source: tui/src/inline_visualization_tests.rs
expression: "format!(\"rich:\\n{rich}\\n\\nraw:\\n{raw}\")"
---
rich:
• Before

<image row; uploads PNG>
<image row>
<image row>
<image row>
<image row>
<image row>
<image row>
<image row>
<image row>
<image row>
  [open/zoom]

  After

raw:
Before

```d2
direction: right
user -> agent -> tool
```
::codex-inline-vis{file="diagram.png"}

After
