codex-rs/tui/src/snapshots/codex_tui__inline_visualization__tests__inline_mermaid_artifact_renders_inline.snap
---
source: tui/src/inline_visualization_tests.rs
expression: rendered
---
• Before

<image row; uploads PNG>
<image row>
<image row>
<image row>
<image row>
<image row>
<image row>
<image row>
<image row>
<image row>
  [open/zoom]

  After
