codex-rs/tui/src/snapshots/codex_tui__inline_visualization__tests__native_d2_fence_renders_inline_without_history_rewrite.snap
---
source: tui/src/inline_visualization_tests.rs
expression: "format!(\"rich:\\n{rich}\\n\\nraw:\\n{raw}\")"
---
rich:
• Before

<image row; uploads PNG>
<image row>
<image row>
<image row>
<image row>
<image row>
<image row>
<image row>
<image row>
<image row>

  After

raw:
Before

```d2
direction: right
user -> agent -> tool
```

After
