codex-rs/tui/src/snapshots/codex_tui__inline_visualization__tests__native_latex_fence_uses_terminal_formula_rows_without_history_rewrite.snap
---
source: tui/src/inline_visualization_tests.rs
expression: "format!(\"rich:\\n{rich}\\n\\nraw:\\n{raw}\")"
---
rich:
• Before

<formula row; uploads transparent PNG>
<formula row>
<formula row>
<formula row>
  [open/zoom]

  After

raw:
Before

```latex
E = mc^2
```

After
