codex-rs/tui/src/snapshots/codex_tui__inline_visualization__tests__native_mermaid_fence_renders_inline_without_history_rewrite.snap
---
source: tui/src/inline_visualization_tests.rs
expression: "format!(\"rich:\\n{rich}\\n\\nraw:\\n{raw}\")"
---
rich:
• Before

<image row; uploads PNG>
<image row>
<image row>
<image row>
<image row>
<image row>
<image row>
<image row>
<image row>
<image row>
  [open/zoom]

  After

raw:
Before

```mermaid
flowchart LR
user --> agent --> tool
```

After
