codex-rs/tui/src/snapshots/codex_tui__inline_visualization__tests__standalone_png_directive_renders_inline.snap
---
source: tui/src/inline_visualization_tests.rs
expression: rendered
---
• Rendered and
  verified.

<image row; uploads PNG>
<image row>
<image row>
<image row>
<image row>
